--- a/JsFolder/stylesheet/style.css
+++ b/JsFolder/stylesheet/style.css
@@ -44,6 +44,7 @@ h1 {
   margin-right: 40px;
 }
 .rigth {
+  min-width: 175px;
   position: relative;
   font-size: 20px;
   float: right;
@@ -72,6 +73,12 @@ h1 {
   bottom: 10px;
   text-align: center;
   margin-left: 100px;
+}
+
+@media screen and (max-width: 362px) {
+  .rigth {
+    top: 150px;
+  }
 }
 /* This setting of laptops */
 /* @media screen and (min-width: 1200px) {
